--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <p>entre em contato por email</p>
 </head>
 <body>
     
